1999-04-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* List.m ([List_any -{hdf5,lispIn}:]): Move to setting phase.

	* Map.m ([Map_c -{lisp,hdf5}In:]): Likewise.

1999-03-14  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (INCLUDES): Add -I for libobjc.  Remove -I for
	objectbase.

	* ListShuffler.m: Don't include random.h.  Instead declare
	protocol with getUnsignedWithMin:withMax.

1999-03-09  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Set.[hm], collections.h ([Set_c -add:]): Return NO instead of
	nil.  Make return type boolean.

	* OrderedSet.[hm]: Likewise.

1999-03-04  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Permutation.m ([Permutation_c +createBegin:]): Revert last change.

	* Collection.m ([PermutedIndex_c +createBegin:]): Likewise.

1999-03-04  Vladimir Jojic  <vjojic@chama.santafe.edu>
	
	* Permutation.m ([Permutation_c +createBegin:]): Call allocIVars:
	with [self getClass] as an arguments instead of self and setClass
	to self.

	* Collection.m ([PermutedIndex_c +createBegin:]): Likewise.

1999-03-03  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* Permutation.m ([Permutation_c -createEnd]): Use macro getCZone
	instead of getComponentZone: method.
	([Permutation_c +createBegin:]): Likewise.

	* Collection.m ([PermutedIndex_c -createEnd]): Likewise.
	([PermutedIndex_c -reshuffle]): Likewise.
	([PermutedIndex_c -createEnd]): Likewise.

1999-03-02  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* Permutation.m ([Permutation_c +createBegin:]): Use component zone
	for allocating shuffler.
	([Permutation_c -mapAllocations:mapalloc]): Call 
	[super mapAllocations: mapalloc] to deallocate block of memory
	allocated by array.

1999-02-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* InputStream.m ([InputStream_c -getExpr]): Disable "nil" handling.

1999-02-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (CURRENT, REVISION, AGE): No changes.  Version 1.4.1.
